syntax = "proto3";

package bst.v1;

import "bst/v1/user.proto";
import "google/protobuf/timestamp.proto";

message GetUserProfileRequest {
  int32 user_id = 1;
}

message GetUserProfileResponse {
  UserProfile profile = 1;
}

service UserProfileService {
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}
